@@ -67,8 +67,13 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.crs.Main</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 </project>
